<resources>
    <string name="app_name">Shuta</string>
    <string name="loginBtn">Login</string>
    <string name="passwordHint">Password</string>
    <string name="RegNumberHint">RegNumber</string>
    <string name="login_name">Login</string>
    <string name="classes">Classes</string>
    <string name="subjects">Subjects</string>
    <string name="students">Students</string>
    <string name="staff">Staff</string>
    <string name="viewresults">View Results</string>
    <string name="sub_teachers">Subjects V.S Teachers</string>
    <string name="Sub_Code">Subject Code</string>
    <string name="subject">Subject</string>
    <string name="marks">Marks</string>
    <string name="teacher">Teacher</string>
    <string name="title_activity_staff_landing_page">StaffLandingPage</string>
    <string name="manageclass">Class Name</string>
    <string name="managesubjects">Subject Name</string>
    <string name="subj">Subject Name</string>
    <string name="teach">Class teacher</string>
    <string name="add">Add</string>
    <string name="id">ID</string>
    <string name="clas">CLASS</string>
    <string name="sectionview">SEC</string>
    <string name="subjectview">SUBJECT</string>
    <string name="teacherview">TEACHER</string>
    <string name="registerStudent">REGISTER</string>
    <string name="registerStudentTitle">Student Registration</string>
    <string name="studentDateOfBirth">Date of birth</string>
    <string name="studentHome">Home</string>
    <string name="StudentParentNumber">Parent/Guardian number</string>
    <string name="studentClass">Class</string>
    <string name="registerTeacherTitle">TEACHER REGISTRATION</string>
    <string name="teacherName">Name</string>
    <string name="teacherId">ID</string>
    <string name="teacherNumber">Phone Number</string>
    <string name="staffList">Staff List</string>
    <string name="sub">Create Subject</string>
    <string name="subjectNam">Enter Subject Name</string>
    <string name="subjectCode">Enter Subject Code</string>"
    <string name="createSub">CREATE</string>
    <string name="cancelSub">CANCEL</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
