<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/classesbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnBluePale"
            android:drawableTop="@drawable/class_ic"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/classes"
            android:textAllCaps="false"
            android:textColor="#e8e9e9" />



        <Button
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAllCaps="false"
            android:background="@color/btnOrange"
            android:drawableTop="@drawable/subject_ic"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/subjects"
            android:textColor="#e8e9e9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/studentbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnGreen"
            android:drawableTop="@drawable/student_ic"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="5dp"
            android:text="@string/students"
            android:textAllCaps="false"
            android:textColor="#e8e9e9" />


        <Button
            android:id="@+id/staffbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/btnPink"
            android:drawableTop="@drawable/student_ic"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="5dp"
            android:text="@string/staff"
            android:textAllCaps="false"
            android:textColor="#e8e9e9" />

    </LinearLayout>
</LinearLayout>